Remove WebResource import and packageName and packageVersion from ServiceClientTemplates

--- a/src/azure/Templates/AzureServiceClientTemplate.cshtml
+++ b/src/azure/Templates/AzureServiceClientTemplate.cshtml
@@ -13,22 +13,17 @@ import * as Models from "./models";
 import * as Mappers from "./models/mappers";
 import * as msRest from "ms-rest-js";
 import * as msRestAzure from "ms-rest-azure-js";
-@if (Model.MethodGroupModels.Any()) {
+@if (Model.MethodGroupModels.Any())
+{
 @:import * as operations from "./operations";
 }
 @if (Model.ContainsDurationProperty())
 {
 @:import * as moment from "moment";
-@EmptyLine
-}
-@if (Model.MethodTemplateModels.Any())
-{
-@:const WebResource = msRest.WebResource;
 }
 @EmptyLine
 @{var requiredParameters = Model.Properties.Where(p => p.IsRequired && !p.IsConstant && string.IsNullOrEmpty(p.DefaultValue));}
 @{var optionalParameters = Model.Properties.Where(p => (!p.IsRequired || p.IsRequired && !string.IsNullOrEmpty(p.DefaultValue)) && !p.IsConstant && !p.Name.EqualsIgnoreCase("apiVersion"));}
-@EmptyLine
 class @(Model.Name) extends msRestAzure.AzureServiceClient {
 
 @foreach (var property in Model.Properties)
