--- a/src/vanilla/Templates/ServiceClientTemplate.cshtml
+++ b/src/vanilla/Templates/ServiceClientTemplate.cshtml
@@ -11,24 +11,17 @@
 import * as msRest from "ms-rest-js";
 import * as Models from "./models";
 import * as Mappers from "./models/mappers";
-@if (Model.MethodGroupModels.Any()) {
+@if (Model.MethodGroupModels.Any())
+{
 @:import * as operations from "./operations";
 }
 @if (Model.ContainsDurationProperty())
 {
 @:import * as moment from "moment";
-@EmptyLine
-}
-@if (Model.MethodTemplateModels.Any())
-{
-@:const WebResource = msRest.WebResource;
 }
 @EmptyLine
-const packageName = "@Model.PackageName";
-const packageVersion = "@Model.PackageVersion";
 @{var requiredParameters = Model.Properties.Where(p => p.IsRequired && !p.IsConstant && string.IsNullOrEmpty(p.DefaultValue));}
 @{var optionalParameters = Model.Properties.Where(p => (!p.IsRequired || p.IsRequired && !string.IsNullOrEmpty(p.DefaultValue)) && !p.IsConstant);}
-@EmptyLine
 class @(Model.Name) extends msRest.ServiceClient {
 @foreach (var property in Model.Properties)
 {
